--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Ionic CheckBox
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,12 +9,24 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
+      <ion-title size="large">Ionic CheckBox</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+  <ion-list lines="full">
+    <ion-item>
+      <ion-label><strong>Superheroes - Select All</strong></ion-label>
+      <ion-checkbox slot="start" [(ngModel)]="checkParent" [indeterminate]="indeterminateState"
+        (click)="checkCheckbox($event)"></ion-checkbox>
+    </ion-item>
+  </ion-list>
+  <ion-list>
+    <ion-item *ngFor="let checkboxes of Checkboxes">
+      <ion-label>{{checkboxes.value}}</ion-label>
+      <ion-checkbox slot="start" [(ngModel)]="checkboxes.isItemChecked"  (ionChange)="verifyEvent($event, checkboxes)">
+      </ion-checkbox>
+    </ion-item>
+  </ion-list>
+
+
 </ion-content>
